fixed less spacing issue

--- a/src/views/LoginForm/loginForm.module.scss
+++ b/src/views/LoginForm/loginForm.module.scss
@@ -82,6 +82,8 @@
   display: flex;
   flex-direction: column;
   gap: var(--gapLarge);
+  flex: 1;
+  justify-content: space-between;
 }
 
 .input {
@@ -98,6 +100,7 @@
   font-size: var(--fontSizeSmall);
   font-weight: var(--fontWeightBold);
   color: var(--error);
+  padding-bottom: var(--paddingExtraSmall);
 }
 
 @media (max-width: 511px) {
